; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/nodes/decompress_chunk/extr_decompress_chunk.c_decompress_chunk_add_plannerinfo.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/nodes/decompress_chunk/extr_decompress_chunk.c_decompress_chunk_add_plannerinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_16__ = type { i64, i32**, %struct.TYPE_15__*, i32**, i32** }
%struct.TYPE_15__ = type { i32 }
%struct.TYPE_17__ = type { i32*, i32* }
%struct.TYPE_18__ = type { i32, %struct.TYPE_14__ }
%struct.TYPE_14__ = type { i32 }

@AccessShareLock = common dso_local global i32 0, align 4
@RELOPT_BASEREL = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_16__*, %struct.TYPE_17__*, %struct.TYPE_18__*, i32*, i32)* @decompress_chunk_add_plannerinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decompress_chunk_add_plannerinfo(%struct.TYPE_16__* %0, %struct.TYPE_17__* %1, %struct.TYPE_18__* %2, i32* %3, i32 %4) #0 {
  %6 = alloca %struct.TYPE_16__*, align 8
  %7 = alloca %struct.TYPE_17__*, align 8
  %8 = alloca %struct.TYPE_18__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_18__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  store %struct.TYPE_16__* %0, %struct.TYPE_16__** %6, align 8
  store %struct.TYPE_17__* %1, %struct.TYPE_17__** %7, align 8
  store %struct.TYPE_18__* %2, %struct.TYPE_18__** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %15 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %11, align 8
  %18 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %19 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call %struct.TYPE_18__* @ts_chunk_get_by_id(i32 %21, i32 0, i32 1)
  store %struct.TYPE_18__* %22, %struct.TYPE_18__** %12, align 8
  %23 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %24 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %13, align 4
  %26 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %27, align 8
  %30 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %30, i32 0, i32 1
  %32 = load i32**, i32*** %31, align 8
  %33 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = mul i64 %35, 8
  %37 = trunc i64 %36 to i32
  %38 = call i8* @repalloc(i32** %32, i32 %37)
  %39 = bitcast i8* %38 to i32**
  %40 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %41 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %40, i32 0, i32 1
  store i32** %39, i32*** %41, align 8
  %42 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %43 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %42, i32 0, i32 3
  %44 = load i32**, i32*** %43, align 8
  %45 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %46 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = mul i64 %47, 8
  %49 = trunc i64 %48 to i32
  %50 = call i8* @repalloc(i32** %44, i32 %49)
  %51 = bitcast i8* %50 to i32**
  %52 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %53 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %52, i32 0, i32 3
  store i32** %51, i32*** %53, align 8
  %54 = load i32, i32* %13, align 4
  %55 = load i32, i32* @AccessShareLock, align 4
  %56 = call i32* @decompress_chunk_make_rte(i32 %54, i32 %55)
  %57 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %58 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %57, i32 0, i32 1
  store i32* %56, i32** %58, align 8
  %59 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %60 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %59, i32 0, i32 1
  %61 = load i32*, i32** %60, align 8
  %62 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %63 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %62, i32 0, i32 3
  %64 = load i32**, i32*** %63, align 8
  %65 = load i64, i64* %11, align 8
  %66 = getelementptr inbounds i32*, i32** %64, i64 %65
  store i32* %61, i32** %66, align 8
  %67 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %68 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %67, i32 0, i32 2
  %69 = load %struct.TYPE_15__*, %struct.TYPE_15__** %68, align 8
  %70 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %69, i32 0, i32 0
  %71 = load i32, i32* %70, align 4
  %72 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %73 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %72, i32 0, i32 1
  %74 = load i32*, i32** %73, align 8
  %75 = call i32 @lappend(i32 %71, i32* %74)
  %76 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %77 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %76, i32 0, i32 2
  %78 = load %struct.TYPE_15__*, %struct.TYPE_15__** %77, align 8
  %79 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %78, i32 0, i32 0
  store i32 %75, i32* %79, align 4
  %80 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %81 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %80, i32 0, i32 1
  %82 = load i32**, i32*** %81, align 8
  %83 = load i64, i64* %11, align 8
  %84 = getelementptr inbounds i32*, i32** %82, i64 %83
  store i32* null, i32** %84, align 8
  %85 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %86 = load i64, i64* %11, align 8
  %87 = call i32* @build_simple_rel(%struct.TYPE_16__* %85, i64 %86, i32* null)
  store i32* %87, i32** %14, align 8
  %88 = load i32*, i32** %14, align 8
  %89 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %90 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %89, i32 0, i32 1
  %91 = load i32**, i32*** %90, align 8
  %92 = load i64, i64* %11, align 8
  %93 = getelementptr inbounds i32*, i32** %91, i64 %92
  store i32* %88, i32** %93, align 8
  %94 = load i32*, i32** %14, align 8
  %95 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %96 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %95, i32 0, i32 0
  store i32* %94, i32** %96, align 8
  %97 = load i32*, i32** %14, align 8
  %98 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %99 = load i32, i32* %10, align 4
  %100 = call i32 @compressed_rel_setup_reltarget(i32* %97, %struct.TYPE_17__* %98, i32 %99)
  %101 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %102 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %103 = call i32 @compressed_rel_setup_equivalence_classes(%struct.TYPE_16__* %101, %struct.TYPE_17__* %102)
  ret void
}

declare dso_local %struct.TYPE_18__* @ts_chunk_get_by_id(i32, i32, i32) #1

declare dso_local i8* @repalloc(i32**, i32) #1

declare dso_local i32* @decompress_chunk_make_rte(i32, i32) #1

declare dso_local i32 @lappend(i32, i32*) #1

declare dso_local i32* @build_simple_rel(%struct.TYPE_16__*, i64, i32*) #1

declare dso_local i32 @compressed_rel_setup_reltarget(i32*, %struct.TYPE_17__*, i32) #1

declare dso_local i32 @compressed_rel_setup_equivalence_classes(%struct.TYPE_16__*, %struct.TYPE_17__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
